--- a/src/app/template/basicos/basicos.component.html
+++ b/src/app/template/basicos/basicos.component.html
@@ -9,7 +9,7 @@
                 <div class="col-9">
                     <input type="text"
                             class="form-control"
-                            ngModel
+                            [ngModel]="initForm.producto "
                             name="producto"
                             placeholder="Nombre del producto"
                             required
@@ -24,7 +24,7 @@
                 <div class="col-sm-9">
                     <input type="number"
                             class="form-control"
-                            ngModel
+                            [ngModel]="initForm.precio "
                             name="precio"
                             placeholder="Precio del producto"
                             required
@@ -39,7 +39,7 @@
                 <div class="col-sm-9">
                     <input type="number"
                             class="form-control"
-                            ngModel
+                            [ngModel]="initForm.existencias "
                             name="existencias"
                             customMin
                             [minimo]= "0"
@@ -72,7 +72,7 @@
         <pre>{{miFormulario.touched}}</pre>
         <span>Valor</span>
         <pre>{{miFormulario.value |json}}</pre>
-        <span>Custom Directive</span>
-        <pre>{{miFormulario.controls['existencias'].errors |json}}</pre>
+        <!-- <span>Custom Directive</span>
+        <pre>{{miFormulario.controls['existencias'].errors |json}}</pre> -->
     </div>
 </div>
