--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,73 @@
-<p>dinamicos works!</p>
+<h2>Template: <small>Dinámicos</small></h2>
+<hr>
+
+<form (ngSubmit)="guardar()" autocomplete="off" #miFormulario="ngForm">
+
+    <!-- Nombre -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+        <div class="col-sm-9">
+            <input type="text" 
+                   class="form-control" 
+                   placeholder="Nombre de la persona"
+                   [ngModel]="persona.nombre"
+                   name="nombre"
+                   required>
+            <span class="form-text text-danger" *ngIf="miFormulario.controls['nombre']?.errors && miFormulario.controls['nombre']?.touched">Este campo es obligatorio</span>
+        </div>
+    </div>
+
+    <!-- Agregar favorito -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+        <div class="col-sm-9">
+            
+            <div class="input-group">
+                <input class="form-control" 
+                   placeholder="Agregar favorito"
+                   [(ngModel)]="nuevoJuego"
+                   name="nuevoJuego"
+                   (keyUp.enter)="agregarJuego()"
+                   >
+                <button class="btn btn-outline-primary" type="button" (click)="agregarJuego()"> Agregar</button>
+            </div>
+            
+            
+            
+        </div>
+    </div>
+
+    <!-- lista de juegos favoritos -->
+    <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+        <div class="col-sm-9">
+
+            <div class="input-group mb-1" *ngFor="let juegos of persona.favoritos; let i= index">
+
+                <input class="form-control"  [(ngModel)]="juegos.nombre" name="favorito_{{i}}" required>
+                <button class="btn btn-outline-danger" type="button" (click)="eliminar(i)"> Eliminar</button>
+            </div>
+
+            
+            
+            
+        </div>
+    </div>
+
+
+    <div class="row">
+        
+        <div class="col-sm-9">
+            <button type="button" (click)="guardar()" class="btn btn-primary float-end" [disabled]="miFormulario.invalid">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+</form>
+
+<span>
+    Persona
+</span>
+<pre>{{persona | json}}</pre>
