--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -7,13 +7,25 @@
         <label class="col-sm-3 col-form-label"> Género</label>
         <div class="col-sm-9">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="radioGenero" id="radioMasculino">
+                <input class="form-check-input" 
+                       type="radio" 
+                       name="radioGenero" 
+                       id="radioMasculino" 
+                       value="M" 
+                       [(ngModel)]="persona.genero" 
+                       required>
                 <label class="form-check-label" for="radioMasculino">
                     Masculino
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="radioGenero" id="radioFemenino">
+                <input class="form-check-input" 
+                       type="radio" 
+                       name="radioGenero" 
+                       id="radioFemenino" 
+                       value="F" 
+                       [(ngModel)]="persona.genero" 
+                       required>
                 <label class="form-check-label" for="radioFemenino">
                     Femenino
                 </label>
@@ -26,8 +38,8 @@
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label"> Notificaciones</label>
         <div class="col-sm-9">
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" [(ngModel)]="persona.notificaciones" name="notificaciones">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
 
@@ -39,7 +51,7 @@
         <div class="col-sm-9">
 
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="terminos" [(ngModel)]="terminosYCondiciones" required>
                 <label class="form-check-label" for="flexCheckDefault">
                     Terminos y condiciones
                 </label>
@@ -50,7 +62,7 @@
 
     <div class="row">
         <div class="col">
-            <button class="btn btn-primary float-end">
+            <button class="btn btn-primary float-end" [disabled]="miFormulario.invalid">
                 Guardar
             </button>
         </div>
@@ -59,3 +71,20 @@
 
 
 </form>
+
+<h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+<h5>persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+<h5>Valid:</h5>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<h5>Terminos:</h5>
+<pre>{{miFormulario.controls['terminos'].errors |json}}</pre>
+<br>
+<pre>Condiciones:</pre>
+
+
+<!-- en caja de bananas [()] para que emita y escuche -->
