--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,73 @@
-<p>basicos works!</p>
+<h2>Reactivos: Básicos</h2>
+<hr>
+<div class="row">
+    <div class="col">
+        <form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="guardar()">
+            <!-- Campo de producto -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Producto</label>
+                <div class="col-9">
+                    <input type="text"
+                            class="form-control"
+                             formControlName="nombre" 
+                            placeholder="Nombre del producto"
+                            
+                    >
+                </div>
+                <span class="form-text text-danger" *ngIf="campoEsValido('nombre')">Debe ser de 3 letras</span>
+            </div>
+            <!-- Campo de precio -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Precio</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                            class="form-control"
+                            formControlName="precio" 
+                            placeholder="Precio del producto"
+                            
+                    >
+                </div>
+                <span class="form-text text-danger" *ngIf="campoEsValido('precio')">El precio debe ser 0 o mayor</span>
+                
+            </div>
+            <!-- Campo de existencias -->
+            <div class="mb-3 row">
+                <label class="col-sm-3 col-form-label">Existencias</label>
+                <div class="col-sm-9">
+                    <input type="number"
+                            class="form-control"
+                            placeholder="Existencias del producto"
+                            formControlName="existencias" 
+                    >
+                </div>
+                <span class="form-text text-danger" *ngIf="campoEsValido('existencias')">La cantidad debe ser 0 o mayor</span>
+                
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary float-end">
+                        Guardar
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col">
+        <span>Valid</span>
+        <pre>{{miFormulario.valid}}</pre>
+        <span>Pristine</span>
+        <pre>{{miFormulario.pristine}}</pre>
+        <span>Touched</span>
+        <pre>{{miFormulario.touched}}</pre>
+        <span>Valor</span>
+        <pre>{{miFormulario.value |json}}</pre>
+        
+    </div>
+</div> 
+
+<!-- <span>Custom Directive</span>
+        <pre>{{miFormulario.controls['existencias'].errors |json}}</pre> -->
