--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,90 @@
-<p>switches works!</p>
+<h2>Reactivos: Switches</h2>
+<hr>
+
+<form [formGroup]="miFormulario" (ngSubmit)="guardar()">
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"> Género</label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                        
+                       id="radioMasculino" 
+                       value="M" 
+                       formControlName="genero"
+                       >
+                <label class="form-check-label" for="radioMasculino">
+                    Masculino
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       
+                       id="radioFemenino" 
+                       value="F" 
+                       formControlName="genero"
+                       >
+                <label class="form-check-label" for="radioFemenino">
+                    Femenino
+                </label>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"> Notificaciones</label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch mt-2">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" formControlName="notificaciones">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"> </label>
+        <div class="col-sm-9">
+
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="condiciones">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Terminos y condiciones
+                </label>
+              </div>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end" type="submit">
+                Guardar
+            </button>
+        </div>
+    </div>
+
+
+
+</form>
+
+<h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+<h5>persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+<h5>Valid:</h5>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+<h5>Terminos:</h5>
+<!-- <pre>{{miFormulario.controls['terminos'].errors |json}}</pre> -->
+<br>
+<pre>Condiciones:</pre> 
+
+
+<!-- en caja de bananas [()] para que emita y escuche -->
