--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -19,3 +19,11 @@
 </li>
 
 </ul>
+<h2 class="mt-3">
+    Validaciones
+</h2>
+<hr>
+<ul class="list-group">
+    <li class="list-group-item" [routerLink]="[item.ruta]" *ngFor="let item of authMenu" routerLinkActive="active">
+        {{item.texto}}
+    </li>
