--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -1,1 +1,95 @@
-<p>registro works!</p>
+<h2>Validaciones reactivas</h2>
+<hr>
+<div class="row">
+    <div class="col">
+        <form autocomplete="off" [formGroup]="miFormulario" (ngSubmit)="submitFormulario()">
+            <!-- Nombre -->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Nombre</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="nombre" placeholder="Nombre del usuario">
+                    <span class="form-text text-danger" *ngIf="camnpoNoValido('nombre')">
+                        Debe ser en formato de nombre y apellido
+                    </span>
+                </div>
+
+
+            </div>
+            <!-- Email -->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Email</label>
+                <div class="col-sm-9">
+                    <input type="email" class="form-control" formControlName="email" placeholder="Email del usuario">
+                    <span class="form-text text-danger" *ngIf="camnpoNoValido('email')">
+                        El correo es obligatorio
+                    </span>
+                </div>
+
+
+            </div>
+            <!-- Username -->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Username</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" placeholder="Nombre código del usuario" formControlName="username">
+                    <span class="form-text text-danger" *ngIf="camnpoNoValido('username')">
+                        El username no puede ser strider
+                    </span>
+                </div>
+
+
+            </div>
+            <!-- Password -->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Password</label>
+                <div class="col-sm-9">
+                    <input type="password" class="form-control" placeholder="Password de su cuenta" formControlName="password">
+                    <span class="form-text text-danger" *ngIf="camnpoNoValido('password')">
+                        La contraseña debe ser mayor de 6 caracteres.
+                    </span>
+                </div>
+
+
+            </div>
+            <!-- Password 2 -->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Confirmar</label>
+                <div class="col-sm-9">
+                    <input type="password" class="form-control" placeholder="Confirmar la contraseña" formControlName="password2">
+                    <span class="form-text text-danger" *ngIf="camnpoNoValido('password2')">
+                        Las contraseñas deben ser iguales.
+                    </span>
+
+                </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary float-end" type="submit">
+                        Crear
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<h5>Form valid: {{miFormulario.valid}}</h5>
+<h5>Form errors </h5>
+<pre>{{miFormulario.errors |json}}</pre>
+
+<h5>Nombre</h5>
+<pre>{{miFormulario.controls['nombre'].errors |json}}</pre>
+
+<h5>Email</h5>
+<pre>{{miFormulario.controls['email'].errors |json}}</pre>
+
+<h5>Username</h5>
+<pre>{{miFormulario.controls['username'].errors |json}}</pre>
+
+<h5>Password</h5>
+<pre>{{miFormulario.controls['password'].errors |json}}</pre>
+
+<h5>Password2</h5>
+<pre>{{miFormulario.controls['password2'].errors |json}}</pre>
